@@ -146,3 +146,6 @@ https://www.setn.com/News.aspx?NewsID=682768
 https://www.setn.com/News.aspx?NewsID=682670
 https://www.allnews.tw/article/%E6%8A%97%E6%AD%A6%E6%BC%A2%E8%82%BA%E7%82%8E%20%E6%B0%91%E9%80%B2%E9%BB%A8%E5%9C%98%E7%B1%B2%E5%B8%82%E5%BA%9C%E6%8E%8C%E6%8F%A1%E9%98%B2%E7%96%AB%E7%89%A9%E8%B3%87
 http://news.tnn.tw/news.html?c=2&id=141367
+https://turnnewsapp.com/global/wealth/163345.html
+https://turnnewsapp.com/global/politics/163299.html
+https://turnnewsapp.com/global/politics/163253.html
