@@ -1,3 +1,5 @@
+  - Improve the extraction of turnnewsapp.com
+
 v0.9.0 2020-02-04T01:21:00+0900
   - Improve the extraction of news.tnn.tw
   - Improve the extraction of www.setn.com
